# vram.cpp

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  IMPLEMENTATION_PLAN.md  README.md
.github/workflows/: deploy-pages.yml  nightly-llama-sync.yml
cpp/include/vram/: fit_executor.h  gguf_prefix_parser.h  hf_range_fetch_helper.h  predictor_api.h  sim_backend.h
cpp/src/: fit_executor.cpp  gguf_prefix_parser.cpp  hf_range_fetch_helper.cpp  predictor_api.cpp  predictor_main.cpp  predictor_wasm_main.cpp  sim_backend.cpp
cpp/tests/: llama_fit_parity_tests.cpp  parser_tests.cpp  predictor_api_fit_execution_tests.cpp  predictor_api_tests.cpp
cpp/tools/: vram_fit_harness.cpp
docs/: API.md  DEVELOPING.md  EMSCRIPTEN_SETUP.md
include/vram/: fit_executor.h  hf_range_fetch_helper.h  hf_range_plan.h
patches/: llama-emscripten-sync-fit-logs.patch  llama-fit-memory-override.patch
schemas/: predictor-request.schema.json  predictor-response.schema.json
scripts/: build_pages.sh  wrap_fit_compile.sh
src/: fit_executor.cpp  hf_range_fetch_helper.cpp  hf_range_plan.cpp  predictor_api.cpp
tests/: hf_range_fetch_helper_tests.cpp  llama_fit_parity_tests.cpp  parser_tests.cpp  predictor_api_fit_execution_tests.cpp  predictor_api_tests.cpp
ui/: .env.development  README.md  index.html  package-lock.json  package.json  vite.config.js
ui/public/wasm/: vram_predictor.js  vram_predictor.wasm
ui/scripts/: serve-wasm-assets.mjs
ui/src/: App.svelte  app.css
ui/src/components/: FileUpload.svelte  HardwarePanel.svelte  HuggingFaceSearch.svelte  JsonHarness.svelte  ParamPanel.svelte  ResultsTable.svelte  RuntimePanel.svelte
ui/src/lib/: format.js  gguf_utils.js  hf_fit.js  hf_utils.js  predictor.js  predictor_fit_worker.js  predictor_worker_client.js
web/: browser_helper_smoke.html  vram_predictor_browser.js
